--- a/webapp/form.html
+++ b/webapp/form.html
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="/style/form.css">
+  <link rel="stylesheet" href="style/form.css">
 </head>
 
 <body>
@@ -21,17 +21,17 @@
   <nav class="navbar navbar-expand-sm maroon-bg navbar-dark custom-navbar-height">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/img/logo.png" alt="Logo" style="width:40px; border-radius: 50px;">
+        <img src="img/logo.png" alt="Logo" style="width:40px; border-radius: 50px;">
         Anemia Detection
       </a>
 
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/form.html">Detection</a>
+          <a class="nav-link active" href="form.html">Detection</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">More Info</a>
@@ -118,7 +118,7 @@
   </div>
 
 
-  <script src="/script/form.js"></script>
+  <script src="script/form.js"></script>
 
   <!-- Bootstrap script -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
