--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
     <title>Anemia Detection</title>
 </head>
 
@@ -24,17 +24,17 @@
     <nav class="navbar navbar-expand-sm maroon-bg navbar-dark custom-navbar-height josefin-fnt">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/img/logo.png" alt="Logo" style="width:40px; border-radius: 50px;">
+                <img src="img/logo.png" alt="Logo" style="width:40px; border-radius: 50px;">
                 Anemia Detection
             </a>
 
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/form.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/form.html">Detection</a>
+                    <a class="nav-link" href="form.html">Detection</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">More Info</a>
